Subindo com trabalho

--- a/exercicioJS/Tabalho I/pergunteMe/src/app/app.component.html
+++ b/exercicioJS/Tabalho I/pergunteMe/src/app/app.component.html
@@ -1,13 +1,13 @@
 <nav>
     <div class="nav-wrapper grey darken-3">
         <div class="container">
-            <a href="#" class="brand-logo hide-on-med-and-down">pergunte.me</a>
+            <a href="#" class="brand-logo hide-on-med-and-down">qual.eH</a>
             <ul class="right ">
-                <li><a routerLink='restrito/inbox'>Inbox</a></li>
-                <li><a routerLink='restrito/meuPerfil'>Meu perfil</a></li>
-                <li><a routerLink='restrito/minhasPerguntas'>Minhas Perguntas</a></li>
-                <li><a routerLink='restrito/fazerPerguntas'>fazer Perguntas</a></li>
-                <li><a routerLink='sair' (click)="sair()">Sair</a></li>
+                <li><a routerLink='restrito/inbox'>Privado</a></li>
+                <li><a routerLink='restrito/meuPerfil'>Perfil</a></li>
+                <li><a routerLink='restrito/minhasPerguntas'>Minhas Dúvidas</a></li>
+                <li><a routerLink='restrito/fazerPerguntas'>enviar Dúvidas</a></li>
+                <li><a routerLink='sair' (click)="sair()">Logout</a></li>
             </ul>
         </div>
     </div>
