--- a/exercicioJS/Tabalho I/pergunteMe/src/app/envia-pergunta/envia-pergunta.component.html
+++ b/exercicioJS/Tabalho I/pergunteMe/src/app/envia-pergunta/envia-pergunta.component.html
@@ -4,7 +4,7 @@
       <div class="valign z-depth-1 form_cadastro">
           <div class="row">
               <div class="col s12" style="text-align : center">
-                  <h5>Pergunte.me | Nova Pergunta</h5>
+                  <h5>qual.eH | Nova Pergunta</h5>
               </div>
           </div>
           <div class="row col s12" >
@@ -29,7 +29,7 @@
 
                   <div class="input-field col s12">
                       <textarea name="descricao" id="descricao" maxlength="500" class="materialize-textarea" [(ngModel)]="pergunta.descricao" #descricao='ngModel' required ></textarea>
-                      <label for="descricao"> Escreva sua pergunta</label> <br/> 
+                      <label for="descricao"> Sua pergunta</label> <br/> 
                       <small class="red-text" *ngIf="descricao.invalid && descricao.touched">Campo Obrigatorio</small>           
                   </div>      
                     
