--- a/exercicioJS/Tabalho I/pergunteMe/src/app/cad-usuario/cad-usuario.component.html
+++ b/exercicioJS/Tabalho I/pergunteMe/src/app/cad-usuario/cad-usuario.component.html
@@ -4,7 +4,7 @@
         <div class="valign z-depth-1 form_cadastro">
             <div class="row">
                 <div class="col s12" style="text-align : center">
-                    <h5>Pergunte.me | Novo Usuario</h5>
+                    <h5>qual.eH | Novo Usuario</h5>
                 </div>
             </div>
             <div class="row col s12" >
@@ -48,7 +48,7 @@
                     </div>
                     <div class="input-field col s12">
                         <textarea name="bio" id="bio" maxlength="500" class="materialize-textarea" [(ngModel)]="usuario.bio" #bio='ngModel' required ></textarea>
-                        <label for="bio"> Escreva algo sobre você</label> <br/> 
+                        <label for="bio"> Escreva sobre você</label> <br/> 
                         <small class="red-text" *ngIf="bio.invalid && bio.touched">Campo Obrigatorio</small>           
                     </div>        
                 
