--- a/exercicioJS/Tabalho I/pergunteMe/src/app/login/login.component.html
+++ b/exercicioJS/Tabalho I/pergunteMe/src/app/login/login.component.html
@@ -5,7 +5,7 @@
       <div class="valign z-depth-1 form_login">
           <div class="row">
               <div class="col s12" style="text-align : center">
-                  <h5>Pergunte.me | Acesso</h5>
+                  <h5>Qual.eh | Login</h5>
               </div>
           </div>
           <div class="row">
